--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,43 @@ code {
     monospace;
 }
 
+h3 {
+  margin: 0;
+}
+
+.code-block {
+  padding: 1em;
+  background-color: lightgray;
+}
+
+.content {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
 .section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1em;
   border: 2px solid black;
+  border-radius: 5px;
   width: 25em;
+}
+
+.sub-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+}
+
+.parent-color {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .color-block {
@@ -24,6 +58,7 @@ code {
 }
 
 .parent-color {
+  margin: 0.5em;
   height: 7em;
   width: 7em;
   background-image: url(https://e1.pngegg.com/pngimages/649/332/png-clipart-motivos-black-striped-pattern-art-thumbnail.png);
